# flipstack

./: .gitignore  README.md  pyproject.toml
config/: default.toml
flipstack/: __init__.py  _perf.py  cli.py
flipstack/config/: __init__.py  schema.py
flipstack/core/: io.py  permutation.py  types.py
flipstack/evaluate/: compare.py  merge.py  scoring.py
flipstack/heuristics/: base.py  composite.py  gap.py  lock_detect.py  singleton.py
flipstack/models/: base.py  move_predictor.py  predictor.py  resnet_mlp.py  xgboost_model.py
flipstack/search/: beam.py  beam_bidir.py  beam_gpu.py  gap_reduce.py  move_filter.py  optimal_dfs.py
flipstack/solver/: merger.py  portfolio.py
flipstack/tracking/: json_logger.py  wandb_logger.py
flipstack/training/: data_gen.py  torch_trainer.py  trainer.py  trie_builder.py  trie_dataset.py
scripts/: _common.py  gap_enumerate_all.cpp  gap_only_dfs.cpp  gap_slack_dfs.cpp  merge_solutions.py  shorten_solutions.py
tests/: test_beam.py  test_bidir.py  test_config.py  test_core.py  test_gap.py  test_gap_reduce.py  test_gpu_beam.py  test_heuristics.py  test_move_filter.py  test_optimal_pipeline.py  test_predictor.py  test_smoke.py  test_tracking.py
